--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.1.9
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
